deploy: 1c26d7537a62ea0ef907abef1e2274e4cefe9711

--- a/genindex.html
+++ b/genindex.html
@@ -284,34 +284,25 @@ document.write(`
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
  | <a href="#R"><strong>R</strong></a>
+ | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
- | <a href="#U"><strong>U</strong></a>
  
 </div>
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/metrics/EnergyDistance.html#metrics.EnergyDistance.calculate">calculate() (metrics.EnergyDistance method)</a>
+      <li><a href="autoapi/synthval/metrics/EnergyDistance.html#synthval.metrics.EnergyDistance.calculate">calculate() (synthval.metrics.EnergyDistance method)</a>
 
       <ul>
-        <li><a href="autoapi/metrics/FCNNAccuracyMetric.html#metrics.FCNNAccuracyMetric.calculate">(metrics.FCNNAccuracyMetric method)</a>
+        <li><a href="autoapi/synthval/metrics/FCNNAccuracyMetric.html#synthval.metrics.FCNNAccuracyMetric.calculate">(synthval.metrics.FCNNAccuracyMetric method)</a>
 </li>
-        <li><a href="autoapi/metrics/KLDivergenceEstimation.html#metrics.KLDivergenceEstimation.calculate">(metrics.KLDivergenceEstimation method)</a>
+        <li><a href="autoapi/synthval/metrics/KLDivergenceEstimation.html#synthval.metrics.KLDivergenceEstimation.calculate">(synthval.metrics.KLDivergenceEstimation method)</a>
 </li>
-        <li><a href="autoapi/metrics/MeanMahalanobisDistance.html#metrics.MeanMahalanobisDistance.calculate">(metrics.MeanMahalanobisDistance method)</a>
+        <li><a href="autoapi/synthval/metrics/MeanMahalanobisDistance.html#synthval.metrics.MeanMahalanobisDistance.calculate">(synthval.metrics.MeanMahalanobisDistance method)</a>
 </li>
-        <li><a href="autoapi/metrics/SimilarityMetric.html#metrics.SimilarityMetric.calculate">(metrics.SimilarityMetric method)</a>
+        <li><a href="autoapi/synthval/metrics/SimilarityMetric.html#synthval.metrics.SimilarityMetric.calculate">(synthval.metrics.SimilarityMetric method)</a>
 </li>
-        <li><a href="autoapi/metrics/WassersteinDistance.html#metrics.WassersteinDistance.calculate">(metrics.WassersteinDistance method)</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li>
-    configs
-
-      <ul>
-        <li><a href="autoapi/configs/index.html#module-configs">module</a>
+        <li><a href="autoapi/synthval/metrics/WassersteinDistance.html#synthval.metrics.WassersteinDistance.calculate">(synthval.metrics.WassersteinDistance method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -320,13 +311,13 @@ document.write(`
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/configs/index.html#configs.DEFAULT_NETWORK_PARAMS">DEFAULT_NETWORK_PARAMS (in module configs)</a>
+      <li><a href="autoapi/synthval/configs/index.html#synthval.configs.DEFAULT_NETWORK_PARAMS">DEFAULT_NETWORK_PARAMS (in module synthval.configs)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/configs/index.html#configs.DEFAULT_TESTING_PARAMS">DEFAULT_TESTING_PARAMS (in module configs)</a>
+      <li><a href="autoapi/synthval/configs/index.html#synthval.configs.DEFAULT_TESTING_PARAMS">DEFAULT_TESTING_PARAMS (in module synthval.configs)</a>
 </li>
-      <li><a href="autoapi/configs/index.html#configs.DEFAULT_TRAINING_PARAMS">DEFAULT_TRAINING_PARAMS (in module configs)</a>
+      <li><a href="autoapi/synthval/configs/index.html#synthval.configs.DEFAULT_TRAINING_PARAMS">DEFAULT_TRAINING_PARAMS (in module synthval.configs)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -334,48 +325,31 @@ document.write(`
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/features_extraction/DinoV2FeatureExtractor.html#features_extraction.DinoV2FeatureExtractor.feature_extraction">feature_extraction() (features_extraction.DinoV2FeatureExtractor method)</a>
+      <li><a href="autoapi/synthval/features_extraction/DinoV2FeatureExtractor.html#synthval.features_extraction.DinoV2FeatureExtractor.feature_extraction">feature_extraction() (synthval.features_extraction.DinoV2FeatureExtractor method)</a>
 
       <ul>
-        <li><a href="autoapi/features_extraction/FeatureExtractor.html#features_extraction.FeatureExtractor.feature_extraction">(features_extraction.FeatureExtractor method)</a>
+        <li><a href="autoapi/synthval/features_extraction/FeatureExtractor.html#synthval.features_extraction.FeatureExtractor.feature_extraction">(synthval.features_extraction.FeatureExtractor method)</a>
 </li>
-        <li><a href="autoapi/features_extraction/MambaFeatureExtractor.html#features_extraction.MambaFeatureExtractor.feature_extraction">(features_extraction.MambaFeatureExtractor method)</a>
+        <li><a href="autoapi/synthval/features_extraction/MambaFeatureExtractor.html#synthval.features_extraction.MambaFeatureExtractor.feature_extraction">(synthval.features_extraction.MambaFeatureExtractor method)</a>
 </li>
-        <li><a href="autoapi/features_extraction/RadDinoFeatureExtractor.html#features_extraction.RadDinoFeatureExtractor.feature_extraction">(features_extraction.RadDinoFeatureExtractor method)</a>
-</li>
-      </ul></li>
-      <li>
-    features_extraction
-
-      <ul>
-        <li><a href="autoapi/features_extraction/index.html#module-features_extraction">module</a>
+        <li><a href="autoapi/synthval/features_extraction/RadDinoFeatureExtractor.html#synthval.features_extraction.RadDinoFeatureExtractor.feature_extraction">(synthval.features_extraction.RadDinoFeatureExtractor method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/features_extraction/DinoV2FeatureExtractor.html#features_extraction.DinoV2FeatureExtractor">features_extraction.DinoV2FeatureExtractor (built-in class)</a>
-</li>
-      <li><a href="autoapi/features_extraction/FeatureExtractor.html#features_extraction.FeatureExtractor">features_extraction.FeatureExtractor (built-in class)</a>
-</li>
-      <li><a href="autoapi/features_extraction/MambaFeatureExtractor.html#features_extraction.MambaFeatureExtractor">features_extraction.MambaFeatureExtractor (built-in class)</a>
-</li>
-      <li><a href="autoapi/features_extraction/RadDinoFeatureExtractor.html#features_extraction.RadDinoFeatureExtractor">features_extraction.RadDinoFeatureExtractor (built-in class)</a>
-</li>
   </ul></td>
 </tr></table>
 
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/features_extraction/FeatureExtractor.html#features_extraction.FeatureExtractor.get_features_df">get_features_df() (features_extraction.FeatureExtractor method)</a>
+      <li><a href="autoapi/synthval/features_extraction/FeatureExtractor.html#synthval.features_extraction.FeatureExtractor.get_features_df">get_features_df() (synthval.features_extraction.FeatureExtractor method)</a>
 </li>
-      <li><a href="autoapi/utilities/index.html#utilities.get_pil_image">get_pil_image() (in module utilities)</a>
+      <li><a href="autoapi/synthval/utilities/index.html#synthval.utilities.get_pil_image">get_pil_image() (in module synthval.utilities)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/utilities/index.html#utilities.get_stream_logger">get_stream_logger() (in module utilities)</a>
+      <li><a href="autoapi/synthval/utilities/index.html#synthval.utilities.get_stream_logger">get_stream_logger() (in module synthval.utilities)</a>
 </li>
-      <li><a href="autoapi/features_extraction/FeatureExtractor.html#features_extraction.FeatureExtractor.group_feature_extraction">group_feature_extraction() (features_extraction.FeatureExtractor method)</a>
+      <li><a href="autoapi/synthval/features_extraction/FeatureExtractor.html#synthval.features_extraction.FeatureExtractor.group_feature_extraction">group_feature_extraction() (synthval.features_extraction.FeatureExtractor method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -383,44 +357,25 @@ document.write(`
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li>
-    metrics
+      <li><a href="autoapi/synthval/features_extraction/DinoV2FeatureExtractor.html#synthval.features_extraction.DinoV2FeatureExtractor.model_id">model_id (synthval.features_extraction.DinoV2FeatureExtractor attribute)</a>
 
       <ul>
-        <li><a href="autoapi/metrics/index.html#module-metrics">module</a>
-</li>
-      </ul></li>
-      <li><a href="autoapi/metrics/EnergyDistance.html#metrics.EnergyDistance">metrics.EnergyDistance (built-in class)</a>
-</li>
-      <li><a href="autoapi/metrics/FCNNAccuracyMetric.html#metrics.FCNNAccuracyMetric">metrics.FCNNAccuracyMetric (built-in class)</a>
-</li>
-      <li><a href="autoapi/metrics/KLDivergenceEstimation.html#metrics.KLDivergenceEstimation">metrics.KLDivergenceEstimation (built-in class)</a>
-</li>
-      <li><a href="autoapi/metrics/MeanMahalanobisDistance.html#metrics.MeanMahalanobisDistance">metrics.MeanMahalanobisDistance (built-in class)</a>
-</li>
-      <li><a href="autoapi/metrics/SimilarityMetric.html#metrics.SimilarityMetric">metrics.SimilarityMetric (built-in class)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/metrics/WassersteinDistance.html#metrics.WassersteinDistance">metrics.WassersteinDistance (built-in class)</a>
-</li>
-      <li><a href="autoapi/features_extraction/DinoV2FeatureExtractor.html#features_extraction.DinoV2FeatureExtractor.model_id">model_id (features_extraction.DinoV2FeatureExtractor attribute)</a>
-
-      <ul>
-        <li><a href="autoapi/features_extraction/MambaFeatureExtractor.html#features_extraction.MambaFeatureExtractor.model_id">(features_extraction.MambaFeatureExtractor attribute)</a>
+        <li><a href="autoapi/synthval/features_extraction/MambaFeatureExtractor.html#synthval.features_extraction.MambaFeatureExtractor.model_id">(synthval.features_extraction.MambaFeatureExtractor attribute)</a>
 </li>
       </ul></li>
       <li>
     module
 
       <ul>
-        <li><a href="autoapi/configs/index.html#module-configs">configs</a>
+        <li><a href="autoapi/synthval/index.html#module-synthval">synthval</a>
 </li>
-        <li><a href="autoapi/features_extraction/index.html#module-features_extraction">features_extraction</a>
+        <li><a href="autoapi/synthval/configs/index.html#module-synthval.configs">synthval.configs</a>
 </li>
-        <li><a href="autoapi/metrics/index.html#module-metrics">metrics</a>
+        <li><a href="autoapi/synthval/features_extraction/index.html#module-synthval.features_extraction">synthval.features_extraction</a>
 </li>
-        <li><a href="autoapi/utilities/index.html#module-utilities">utilities</a>
+        <li><a href="autoapi/synthval/metrics/index.html#module-synthval.metrics">synthval.metrics</a>
+</li>
+        <li><a href="autoapi/synthval/utilities/index.html#module-synthval.utilities">synthval.utilities</a>
 </li>
       </ul></li>
   </ul></td>
@@ -429,7 +384,7 @@ document.write(`
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/metrics/FCNNAccuracyMetric.html#metrics.FCNNAccuracyMetric.network_params">network_params (metrics.FCNNAccuracyMetric attribute)</a>
+      <li><a href="autoapi/synthval/metrics/FCNNAccuracyMetric.html#synthval.metrics.FCNNAccuracyMetric.network_params">network_params (synthval.metrics.FCNNAccuracyMetric attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -437,7 +392,72 @@ document.write(`
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/metrics/FCNNAccuracyMetric.html#metrics.FCNNAccuracyMetric.rng_seed">rng_seed (metrics.FCNNAccuracyMetric attribute)</a>
+      <li><a href="autoapi/synthval/metrics/FCNNAccuracyMetric.html#synthval.metrics.FCNNAccuracyMetric.rng_seed">rng_seed (synthval.metrics.FCNNAccuracyMetric attribute)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="S">S</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    synthval
+
+      <ul>
+        <li><a href="autoapi/synthval/index.html#module-synthval">module</a>
+</li>
+      </ul></li>
+      <li>
+    synthval.configs
+
+      <ul>
+        <li><a href="autoapi/synthval/configs/index.html#module-synthval.configs">module</a>
+</li>
+      </ul></li>
+      <li>
+    synthval.features_extraction
+
+      <ul>
+        <li><a href="autoapi/synthval/features_extraction/index.html#module-synthval.features_extraction">module</a>
+</li>
+      </ul></li>
+      <li><a href="autoapi/synthval/features_extraction/DinoV2FeatureExtractor.html#synthval.features_extraction.DinoV2FeatureExtractor">synthval.features_extraction.DinoV2FeatureExtractor (built-in class)</a>
+</li>
+      <li><a href="autoapi/synthval/features_extraction/FeatureExtractor.html#synthval.features_extraction.FeatureExtractor">synthval.features_extraction.FeatureExtractor (built-in class)</a>
+</li>
+      <li><a href="autoapi/synthval/features_extraction/MambaFeatureExtractor.html#synthval.features_extraction.MambaFeatureExtractor">synthval.features_extraction.MambaFeatureExtractor (built-in class)</a>
+</li>
+      <li><a href="autoapi/synthval/features_extraction/RadDinoFeatureExtractor.html#synthval.features_extraction.RadDinoFeatureExtractor">synthval.features_extraction.RadDinoFeatureExtractor (built-in class)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    synthval.metrics
+
+      <ul>
+        <li><a href="autoapi/synthval/metrics/index.html#module-synthval.metrics">module</a>
+</li>
+      </ul></li>
+      <li><a href="autoapi/synthval/metrics/EnergyDistance.html#synthval.metrics.EnergyDistance">synthval.metrics.EnergyDistance (built-in class)</a>
+</li>
+      <li><a href="autoapi/synthval/metrics/FCNNAccuracyMetric.html#synthval.metrics.FCNNAccuracyMetric">synthval.metrics.FCNNAccuracyMetric (built-in class)</a>
+</li>
+      <li><a href="autoapi/synthval/metrics/KLDivergenceEstimation.html#synthval.metrics.KLDivergenceEstimation">synthval.metrics.KLDivergenceEstimation (built-in class)</a>
+</li>
+      <li><a href="autoapi/synthval/metrics/MeanMahalanobisDistance.html#synthval.metrics.MeanMahalanobisDistance">synthval.metrics.MeanMahalanobisDistance (built-in class)</a>
+</li>
+      <li><a href="autoapi/synthval/metrics/SimilarityMetric.html#synthval.metrics.SimilarityMetric">synthval.metrics.SimilarityMetric (built-in class)</a>
+</li>
+      <li><a href="autoapi/synthval/metrics/WassersteinDistance.html#synthval.metrics.WassersteinDistance">synthval.metrics.WassersteinDistance (built-in class)</a>
+</li>
+      <li>
+    synthval.utilities
+
+      <ul>
+        <li><a href="autoapi/synthval/utilities/index.html#module-synthval.utilities">module</a>
+</li>
+      </ul></li>
+      <li><a href="autoapi/synthval/utilities/FeaturesDataset.html#synthval.utilities.FeaturesDataset">synthval.utilities.FeaturesDataset (built-in class)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -445,36 +465,19 @@ document.write(`
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/utilities/FeaturesDataset.html#utilities.FeaturesDataset.test_df">test_df (utilities.FeaturesDataset attribute)</a>
+      <li><a href="autoapi/synthval/utilities/FeaturesDataset.html#synthval.utilities.FeaturesDataset.test_df">test_df (synthval.utilities.FeaturesDataset attribute)</a>
 </li>
-      <li><a href="autoapi/metrics/FCNNAccuracyMetric.html#metrics.FCNNAccuracyMetric.test_percentage">test_percentage (metrics.FCNNAccuracyMetric attribute)</a>
+      <li><a href="autoapi/synthval/metrics/FCNNAccuracyMetric.html#synthval.metrics.FCNNAccuracyMetric.test_percentage">test_percentage (synthval.metrics.FCNNAccuracyMetric attribute)</a>
 </li>
-      <li><a href="autoapi/metrics/FCNNAccuracyMetric.html#metrics.FCNNAccuracyMetric.testing_params">testing_params (metrics.FCNNAccuracyMetric attribute)</a>
+      <li><a href="autoapi/synthval/metrics/FCNNAccuracyMetric.html#synthval.metrics.FCNNAccuracyMetric.testing_params">testing_params (synthval.metrics.FCNNAccuracyMetric attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/utilities/FeaturesDataset.html#utilities.FeaturesDataset.train_df">train_df (utilities.FeaturesDataset attribute)</a>
+      <li><a href="autoapi/synthval/utilities/FeaturesDataset.html#synthval.utilities.FeaturesDataset.train_df">train_df (synthval.utilities.FeaturesDataset attribute)</a>
 </li>
-      <li><a href="autoapi/utilities/FeaturesDataset.html#utilities.FeaturesDataset.train_mode">train_mode (utilities.FeaturesDataset attribute)</a>
+      <li><a href="autoapi/synthval/utilities/FeaturesDataset.html#synthval.utilities.FeaturesDataset.train_mode">train_mode (synthval.utilities.FeaturesDataset attribute)</a>
 </li>
-      <li><a href="autoapi/metrics/FCNNAccuracyMetric.html#metrics.FCNNAccuracyMetric.training_params">training_params (metrics.FCNNAccuracyMetric attribute)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="U">U</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li>
-    utilities
-
-      <ul>
-        <li><a href="autoapi/utilities/index.html#module-utilities">module</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/utilities/FeaturesDataset.html#utilities.FeaturesDataset">utilities.FeaturesDataset (built-in class)</a>
+      <li><a href="autoapi/synthval/metrics/FCNNAccuracyMetric.html#synthval.metrics.FCNNAccuracyMetric.training_params">training_params (synthval.metrics.FCNNAccuracyMetric attribute)</a>
 </li>
   </ul></td>
 </tr></table>
