deploy: 9f9fa0b0b83e67d9518da83d818031d58b8c93de

--- a/genindex.html
+++ b/genindex.html
@@ -296,6 +296,8 @@ document.write(`
       <ul>
         <li><a href="autoapi/synthval/metrics/FCNNAccuracyMetric.html#synthval.metrics.FCNNAccuracyMetric.calculate">(synthval.metrics.FCNNAccuracyMetric method)</a>
 </li>
+        <li><a href="autoapi/synthval/metrics/InceptionScore.html#synthval.metrics.InceptionScore.calculate">(synthval.metrics.InceptionScore method)</a>
+</li>
         <li><a href="autoapi/synthval/metrics/KLDivergenceEstimation.html#synthval.metrics.KLDivergenceEstimation.calculate">(synthval.metrics.KLDivergenceEstimation method)</a>
 </li>
         <li><a href="autoapi/synthval/metrics/MeanMahalanobisDistance.html#synthval.metrics.MeanMahalanobisDistance.calculate">(synthval.metrics.MeanMahalanobisDistance method)</a>
@@ -330,6 +332,8 @@ document.write(`
       <ul>
         <li><a href="autoapi/synthval/features_extraction/FeatureExtractor.html#synthval.features_extraction.FeatureExtractor.feature_extraction">(synthval.features_extraction.FeatureExtractor method)</a>
 </li>
+        <li><a href="autoapi/synthval/features_extraction/InceptionExtractor.html#synthval.features_extraction.InceptionExtractor.feature_extraction">(synthval.features_extraction.InceptionExtractor method)</a>
+</li>
         <li><a href="autoapi/synthval/features_extraction/MambaFeatureExtractor.html#synthval.features_extraction.MambaFeatureExtractor.feature_extraction">(synthval.features_extraction.MambaFeatureExtractor method)</a>
 </li>
         <li><a href="autoapi/synthval/features_extraction/RadDinoFeatureExtractor.html#synthval.features_extraction.RadDinoFeatureExtractor.feature_extraction">(synthval.features_extraction.RadDinoFeatureExtractor method)</a>
@@ -347,6 +351,8 @@ document.write(`
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/synthval/features_extraction/InceptionExtractor.html#synthval.features_extraction.InceptionExtractor.get_probabilities">get_probabilities (synthval.features_extraction.InceptionExtractor attribute)</a>
+</li>
       <li><a href="autoapi/synthval/utilities/index.html#synthval.utilities.get_stream_logger">get_stream_logger() (in module synthval.utilities)</a>
 </li>
       <li><a href="autoapi/synthval/features_extraction/FeatureExtractor.html#synthval.features_extraction.FeatureExtractor.group_feature_extraction">group_feature_extraction() (synthval.features_extraction.FeatureExtractor method)</a>
@@ -360,6 +366,8 @@ document.write(`
       <li><a href="autoapi/synthval/features_extraction/DinoV2FeatureExtractor.html#synthval.features_extraction.DinoV2FeatureExtractor.model_id">model_id (synthval.features_extraction.DinoV2FeatureExtractor attribute)</a>
 
       <ul>
+        <li><a href="autoapi/synthval/features_extraction/InceptionExtractor.html#synthval.features_extraction.InceptionExtractor.model_id">(synthval.features_extraction.InceptionExtractor attribute)</a>
+</li>
         <li><a href="autoapi/synthval/features_extraction/MambaFeatureExtractor.html#synthval.features_extraction.MambaFeatureExtractor.model_id">(synthval.features_extraction.MambaFeatureExtractor attribute)</a>
 </li>
       </ul></li>
@@ -385,6 +393,10 @@ document.write(`
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/synthval/metrics/FCNNAccuracyMetric.html#synthval.metrics.FCNNAccuracyMetric.network_params">network_params (synthval.metrics.FCNNAccuracyMetric attribute)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/synthval/metrics/InceptionScore.html#synthval.metrics.InceptionScore.num_splits">num_splits (synthval.metrics.InceptionScore attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -425,6 +437,8 @@ document.write(`
 </li>
       <li><a href="autoapi/synthval/features_extraction/FeatureExtractor.html#synthval.features_extraction.FeatureExtractor">synthval.features_extraction.FeatureExtractor (built-in class)</a>
 </li>
+      <li><a href="autoapi/synthval/features_extraction/InceptionExtractor.html#synthval.features_extraction.InceptionExtractor">synthval.features_extraction.InceptionExtractor (built-in class)</a>
+</li>
       <li><a href="autoapi/synthval/features_extraction/MambaFeatureExtractor.html#synthval.features_extraction.MambaFeatureExtractor">synthval.features_extraction.MambaFeatureExtractor (built-in class)</a>
 </li>
       <li><a href="autoapi/synthval/features_extraction/RadDinoFeatureExtractor.html#synthval.features_extraction.RadDinoFeatureExtractor">synthval.features_extraction.RadDinoFeatureExtractor (built-in class)</a>
@@ -441,6 +455,8 @@ document.write(`
       <li><a href="autoapi/synthval/metrics/EnergyDistance.html#synthval.metrics.EnergyDistance">synthval.metrics.EnergyDistance (built-in class)</a>
 </li>
       <li><a href="autoapi/synthval/metrics/FCNNAccuracyMetric.html#synthval.metrics.FCNNAccuracyMetric">synthval.metrics.FCNNAccuracyMetric (built-in class)</a>
+</li>
+      <li><a href="autoapi/synthval/metrics/InceptionScore.html#synthval.metrics.InceptionScore">synthval.metrics.InceptionScore (built-in class)</a>
 </li>
       <li><a href="autoapi/synthval/metrics/KLDivergenceEstimation.html#synthval.metrics.KLDivergenceEstimation">synthval.metrics.KLDivergenceEstimation (built-in class)</a>
 </li>
