deploy: bf2d179e39ac3146e752fce2782494b22eb68f8e

--- a/genindex.html
+++ b/genindex.html
@@ -260,10 +260,10 @@
 
 <div class="genindex-jumpbox">
  <a href="#_"><strong>_</strong></a>
+ | <a href="#B"><strong>B</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
- | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
@@ -277,6 +277,24 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="autoapi/synthval/metrics/PRScores.html#synthval.metrics.PRScores.__compute_distances">__compute_distances() (synthval.metrics.PRScores static method)</a>
 </li>
+  </ul></td>
+</tr></table>
+
+<h2 id="B">B</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="autoapi/synthval/features_extraction/DinoV2FeatureExtractor.html#synthval.features_extraction.DinoV2FeatureExtractor.batch_feature_extraction">batch_feature_extraction() (synthval.features_extraction.DinoV2FeatureExtractor method)</a>
+
+      <ul>
+        <li><a href="autoapi/synthval/features_extraction/FeatureExtractor.html#synthval.features_extraction.FeatureExtractor.batch_feature_extraction">(synthval.features_extraction.FeatureExtractor method)</a>
+</li>
+        <li><a href="autoapi/synthval/features_extraction/InceptionExtractor.html#synthval.features_extraction.InceptionExtractor.batch_feature_extraction">(synthval.features_extraction.InceptionExtractor method)</a>
+</li>
+        <li><a href="autoapi/synthval/features_extraction/MambaFeatureExtractor.html#synthval.features_extraction.MambaFeatureExtractor.batch_feature_extraction">(synthval.features_extraction.MambaFeatureExtractor method)</a>
+</li>
+        <li><a href="autoapi/synthval/features_extraction/RadDinoFeatureExtractor.html#synthval.features_extraction.RadDinoFeatureExtractor.batch_feature_extraction">(synthval.features_extraction.RadDinoFeatureExtractor method)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -336,24 +354,6 @@
   </ul></td>
 </tr></table>
 
-<h2 id="F">F</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/synthval/features_extraction/DinoV2FeatureExtractor.html#synthval.features_extraction.DinoV2FeatureExtractor.feature_extraction">feature_extraction() (synthval.features_extraction.DinoV2FeatureExtractor method)</a>
-
-      <ul>
-        <li><a href="autoapi/synthval/features_extraction/FeatureExtractor.html#synthval.features_extraction.FeatureExtractor.feature_extraction">(synthval.features_extraction.FeatureExtractor method)</a>
-</li>
-        <li><a href="autoapi/synthval/features_extraction/InceptionExtractor.html#synthval.features_extraction.InceptionExtractor.feature_extraction">(synthval.features_extraction.InceptionExtractor method)</a>
-</li>
-        <li><a href="autoapi/synthval/features_extraction/MambaFeatureExtractor.html#synthval.features_extraction.MambaFeatureExtractor.feature_extraction">(synthval.features_extraction.MambaFeatureExtractor method)</a>
-</li>
-        <li><a href="autoapi/synthval/features_extraction/RadDinoFeatureExtractor.html#synthval.features_extraction.RadDinoFeatureExtractor.feature_extraction">(synthval.features_extraction.RadDinoFeatureExtractor method)</a>
-</li>
-      </ul></li>
-  </ul></td>
-</tr></table>
-
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -363,8 +363,6 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="autoapi/synthval/features_extraction/InceptionExtractor.html#synthval.features_extraction.InceptionExtractor.get_probabilities">get_probabilities (synthval.features_extraction.InceptionExtractor attribute)</a>
-</li>
       <li><a href="autoapi/synthval/utilities/index.html#synthval.utilities.get_stream_logger">get_stream_logger() (in module synthval.utilities)</a>
 </li>
       <li><a href="autoapi/synthval/features_extraction/FeatureExtractor.html#synthval.features_extraction.FeatureExtractor.group_feature_extraction">group_feature_extraction() (synthval.features_extraction.FeatureExtractor method)</a>
@@ -379,16 +377,6 @@
 </li>
       <li><a href="autoapi/synthval/metrics/KernelDistance.html#synthval.metrics.KernelDistance.max_subset_size">max_subset_size (synthval.metrics.KernelDistance attribute)</a>
 </li>
-      <li><a href="autoapi/synthval/features_extraction/DinoV2FeatureExtractor.html#synthval.features_extraction.DinoV2FeatureExtractor.model_id">model_id (synthval.features_extraction.DinoV2FeatureExtractor attribute)</a>
-
-      <ul>
-        <li><a href="autoapi/synthval/features_extraction/InceptionExtractor.html#synthval.features_extraction.InceptionExtractor.model_id">(synthval.features_extraction.InceptionExtractor attribute)</a>
-</li>
-        <li><a href="autoapi/synthval/features_extraction/MambaFeatureExtractor.html#synthval.features_extraction.MambaFeatureExtractor.model_id">(synthval.features_extraction.MambaFeatureExtractor attribute)</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     module
 
