deploy: cd352b27fc67e7b78fd69be5706ea59fd2ec0eff

--- a/autoapi/synthval/metrics/InceptionScore.html
+++ b/autoapi/synthval/metrics/InceptionScore.html
@@ -377,14 +377,10 @@ over multiple splits of the data for robustness.</p>
 typically obtained from a pre-trained Inception model.</p>
 </dd>
 <dt class="field-even">Returns<span class="colon">:</span></dt>
-<dd class="field-even"><p><ul class="simple">
-<li><p><strong>score_mean</strong> (<em>float</em>) – The mean of the computed Inception Scores across the splits.</p></li>
-<li><p><strong>score_std</strong> (<em>float</em>) – The standard deviation of the Inception Scores across the splits.</p></li>
-</ul>
-</p>
+<dd class="field-even"><p>A numpy array containing the mean and the standard deviation of the computed Inception Scores across the splits.</p>
 </dd>
 <dt class="field-odd">Return type<span class="colon">:</span></dt>
-<dd class="field-odd"><p>(float, float)</p>
+<dd class="field-odd"><p>numpy.ndarray</p>
 </dd>
 </dl>
 </dd></dl>
